--- a/netflix-eureka-naming-server/src/main/resources/application.properties
+++ b/netflix-eureka-naming-server/src/main/resources/application.properties
@@ -1,5 +1,20 @@
 spring.application.name=netflix-eureka-naming-server
-server.port=8761
-sprig.config.import=optional:configserver:http://localhost/8888
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+spring.cloud.config.uri=http://localhost:8888/
+spring.config.import=configserver:http://localhost:8888/
+management.endpoints.web.exposure.include=*
+spring.cloud.config.request-connect-timeout=5000
+spring.cloud.config.request-read-timeout=5000
+spring.cloud.config.retry.max-attempts=6
+spring.cloud.config.retry.initial-interval=1000
+spring.cloud.config.retry.max-interval=2000
+spring.cloud.config.retry.multiplier=1.1
+
+#Loading Discovery Service
+# --- First Instance
+# mvn spring-boot:run -Dspring-boot.run.profiles=instance1
+
+# --- Second Instance
+# mvn spring-boot:run -Dspring-boot.run.profiles=instance2
+
+# --- Third Instance
+# mvn spring-boot:run -Dspring-boot.run.profiles=instance3
