--- a/ServiceAlpha/pom.xml
+++ b/ServiceAlpha/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ufrn.imd</groupId>
+            <artifactId>ServiceBeta1</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
