--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-
-spring.application.name=servicebeta
-server.port=8090
-spring.cloud.loadbalancer.ribbon.enabled = false
-eureka.instance.preferIpAddress = true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone=http://server1:8761/eureka, http://server2:8762/eureka, http://server3:8763/eureka
+spring.application.name=opdigital-configserver
+server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/Kaue-Lustosa/repoConfigServer.git
+spring.cloud.config.server.git.clone-on-start=true
+management.endpoints.web.exposure.include=*
+spring.cloud.config.server.git.search-paths={application}/{profile}, {application}
