--- a/APIGateway/pom.xml
+++ b/APIGateway/pom.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -15,7 +15,7 @@
     <description>APIGateway</description>
     <properties>
         <java.version>21</java.version>
-        <spring-cloud.version>2023.1.0</spring-cloud.version> <!-- Use uma versão disponível -->
+        <spring-cloud.version>Hoxton.SR12</spring-cloud.version> <!-- Versão estável -->
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -41,7 +41,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-            <version>4.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -51,7 +50,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -67,4 +65,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
