--- a/service/ServiceBeta/pom.xml
+++ b/service/ServiceBeta/pom.xml
@@ -11,12 +11,12 @@
     </parent>
 
     <groupId>ufrn.imd</groupId>
-    <artifactId>ServiceAlpha</artifactId>
+    <artifactId>ServiceBeta</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>ServiceAlpha</name>
-    <description>Service Alpha</description>
+    <name>ServiceBeta</name>
+    <description>Service Beta</description>
 
     <properties>
         <java.version>11</java.version>
@@ -36,14 +36,6 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
-        <!-- Dependências dos serviços locais -->
-        <!-- <dependency>
-            <groupId>ufrn.imd</groupId>
-            <artifactId>ServiceBeta</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency> -->
-
-        <!-- Testes -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -83,5 +75,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
