feat: implement tracking product service

--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Discovery
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=false
-spring.cloud.gateway.discovery.locator.include-expression="'SPRING-DATABASE-SERVICE'.equals(serviceId) || 'SPRING-ANALYTICS-SERVICE'.equals(serviceId)"
+spring.cloud.gateway.discovery.locator.include-expression="'ALPHA-SERVICE'.equals(serviceId)"
 
 # Eureka
 eureka.instance.prefer-ip-address=true
