--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=opdigital-configserver
+spring.application.name=config-server
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/Kaue-Lustosa/repoConfigServer.git
 spring.cloud.config.server.git.clone-on-start=true
