--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ufrn.imd</groupId>
-    <artifactId>netflix-eureka-naming-server</artifactId>
+    <artifactId>discovery-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>netflix-eureka-naming-server</name>
     <description>netflix-eureka-naming-server</description>
